--- a/404.html
+++ b/404.html
@@ -4,11 +4,8 @@ permalink: /404.html
 ---
 
 <section class="lost-container">
-  <h1>Uh oh!</h1>
+  <a href="/">BACK</a>
   <div class="link">
-    <img class="selfie" alt="{{ site.name }}" src="{{ site.url }}/assets/images/error.gif" />
+    <img class="selfie" alt="{{ site.name }}" src="{{ site.url }}/assets/images/404.jpg" />
   </div>
-  <br />
-  <br />
-  <a href="/">Take me home!</a>
 </section>
