--- a/index.html
+++ b/index.html
@@ -2,3 +2,25 @@
 layout: page
 title: Home
 ---
+
+<br/>
+<p>
+Hi, I am 杨凯欣 (Kaixin Yang, pronounced as Cashin Young), a second year Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at USC, advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>.
+</p>
+
+<!--
+<div class="
+col-lg-8 col-lg-offset-2
+col-md-10 col-md-offset-1
+sidebar-container">
+{% if site.friends %}
+<hr>
+<h5>FRIENDS</h5>
+<ul class="list-inline">
+{% for friend in site.friends %}
+<li><a href="{{friend.href}}">{{friend.title}}</a></li>
+{% endfor %}
+</ul>
+{% endif %}
+</div>
+-->
