modify navigation and delete unused files

--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@ permalink: /404.html
 ---
 
 <section class="lost-container">
-  <a href="/">BACK</a>
   <div class="link">
-    <img class="selfie" alt="{{ site.name }}" src="{{ site.url }}/assets/images/404.jpg" />
+    <img class="selfie" alt="{{ site.name }}" src="{{ site.url }}/assets/images/404.jpg" height="300px"/>
   </div>
+  <a class="link" href="/" text-decoration=none>BACK</a>
 </section>
