--- a/research.html
+++ b/research.html
@@ -6,11 +6,35 @@ layout: page
 ![Profile Image]({{ site.url }}/{{ site.picture }})
 -->
 
-<h1>Group Website</h1>
+<h1>
+    <a class="link" href="https://descyphy.usc.edu">DesCyPhy Lab</a>
+</h1>
 
-<a class="link" href="https://descyphy.usc.edu">DesCyPhy Lab</a>
+<h2>
+    Lab Introduction
+</h2>
+<p>
+We have two subgroups, focusing on cyber-physical system design and trustworthy SoC design respectively. Trustworthy SoC design group now is interested in logic encryption attack and defense methods on gate-level netlists, as well as the evaluation metrics and general models.
+</p>
 
-<h1>Related Conferences</h1>
+<h2>
+    Lab Members
+</h2>
+<p>
+Advisor: <a class="link" href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a><br/>
+Ph.D. students: 
+<a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a>,
+<a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a>, Chanwook Oh, Nikhil Vijay Naik, Krishna Chaitanya Kalagaria, Nathan Dahlin, Yifeng Xiao, Kevin Chang and me
+</p>
 
+
+<h1>Publication</h1>
+
+<p>
+Y. Hu, K. Yang, S. Nazarian and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/9344079">SANSCrypt: A Sporadic-Authentication-Based Sequential Logic Encryption Scheme</a>," 2020 IFIP/IEEE 28th International Conference on Very Large Scale Integration (VLSI-SOC), Salt Lake City, UT, USA, 2020, pp. 129-134, doi: 10.1109/VLSI-SOC46417.2020.9344079.
+</p>
+
+
+<h1>Conference Related</h1>
 
 <a class="link" href="https://sceneryinmirror.github.io/conference">Conference Deadline</a>
