add conference abstract deadline

--- a/conference.html
+++ b/conference.html
@@ -59,14 +59,20 @@
                 </div>
               </div>
               <div class="col-xs-12 col-sm-6">
-                <span class="timer"></span>
                 <div class="deadline">
-                  <div>Deadline:
+                  Full Paper Countdown: <span class="timer"></span>
+                  <div>Full Paper Deadline:
                     <span class="deadline-time"></span>
-                    <div class="meta">
-                      {{ conf.comment }}
-                    </div>
                   </div>
+                  Abstract Countdown: <span class="abstract-timer"></span>
+                  <div>Abstract Deadline:
+                    <span class="abstract-deadline-time"></span>
+                  </div>
+                  <!--
+                  <div class="meta">
+                    {{ conf.comment }}
+                  </div>
+                  -->
                 </div>
               </div>
           </div>
