--- a/research.html
+++ b/research.html
@@ -24,14 +24,19 @@ We have two subgroups, focusing on cyber-physical system design and trustworthy 
 Advisor: <a class="link" href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a><br/>
 Ph.D. students: 
 <a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a>,
-<a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a>, Chanwook Oh, Nikhil Vijay Naik, Krishna Chaitanya Kalagaria, Nathan Dahlin, Yifeng Xiao, Kevin Chang and me
+<a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a>, Chanwook Oh, Nikhil Vijay Naik, Krishna Chaitanya Kalagaria, Nathan Dahlin, 
+<a class="link" href="https://www.linkedin.com/in/yifeng-xiao-248161204/">Yifeng Xiao</a>, Kevin Chang and me
 </p>
 
 
 <h1>Publication</h1>
 
 <p>
-Y. Hu, K. Yang, S. Nazarian and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/9344079">SANSCrypt: A Sporadic-Authentication-Based Sequential Logic Encryption Scheme</a>," 2020 IFIP/IEEE 28th International Conference on Very Large Scale Integration (VLSI-SOC), Salt Lake City, UT, USA, 2020, pp. 129-134, doi: 10.1109/VLSI-SOC46417.2020.9344079.
+	Y. Hu, K. Yang, S. Nazarian and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/9344079">SANSCrypt: A Sporadic-Authentication-Based Sequential Logic Encryption Scheme</a>," 2020 IFIP/IEEE 28th International Conference on Very Large Scale Integration (VLSI-SOC), Salt Lake City, UT, USA, 2020, pp. 129-134, doi: 10.1109/VLSI-SOC46417.2020.9344079.
+</p>
+
+<p>
+	Y. Hu, K. Yang, S. D. Chowdhury and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9473956">Risk-Aware Cost-Effective Design Methodology for Integrated Circuit Locking</a>," 2021 Design, Automation & Test in Europe Conference & Exhibition (DATE), 2021, pp. 1182-1185, doi: 10.23919/DATE51398.2021.9473956.
 </p>
 
 
