--- a/research.html
+++ b/research.html
@@ -32,12 +32,26 @@ Ph.D. students:
 <h1>Publication</h1>
 
 <p>
-	Y. Hu, K. Yang, S. Nazarian and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/9344079">SANSCrypt: A Sporadic-Authentication-Based Sequential Logic Encryption Scheme</a>," 2020 IFIP/IEEE 28th International Conference on Very Large Scale Integration (VLSI-SOC), Salt Lake City, UT, USA, 2020, pp. 129-134, doi: 10.1109/VLSI-SOC46417.2020.9344079.
+	Y. Hu, Y. Zhang, K. Yang, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://arxiv.org/abs/2108.04892#:~:text=10%20Aug%202021%5D-,Fun%2DSAT%3A%20Functional%20Corruptibility%2DGuided%20SAT%2DBased,Attack%20on%20Sequential%20Logic%20Encryption&text=Numerical%20results%20show%20that%20Fun,one%2Dday%20time%2Dout.">Fun-SAT: Functional Corruptibility-Guided SAT-Based Attack on Sequential Logic Encryption</a>," Proc. IEEE International Symposium on Hardware Oriented Security and Trust (HOST), to appear, Dec. 2021.
 </p>
 
 <p>
-	Y. Hu, K. Yang, S. D. Chowdhury and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9473956">Risk-Aware Cost-Effective Design Methodology for Integrated Circuit Locking</a>," 2021 Design, Automation & Test in Europe Conference & Exhibition (DATE), 2021, pp. 1182-1185, doi: 10.23919/DATE51398.2021.9473956.
+	S. Dutta Chowdhury, K. Yang, P. Nuzzo, "ReIGNN: State Register Identification Using Graph Neural Networks for Circuit Reverse Engineering," Proc. Int. Conf. Computer Aided Design (ICCAD), to appear, Nov. 2021.
 </p>
+
+<p>
+	Y. Hu, K. Yang, S. Nazarian, P. Nuzzo, "<a class="link" href="https://link.springer.com/chapter/10.1007/978-3-030-81641-4_12">SANSCrypt: Sporadic-Authentication-Based Sequential Logic Encryption</a>," in VLSI-SoC: Design Trends, Springer, pp. 255-278, Jul. 2021.
+</p>
+
+<p>
+	Y. Hu, K. Yang, S. D. Chowdhury and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9473956">Risk-Aware Cost-Effective Design Methodology for Integrated Circuit Locking</a>," Proc. IEEE/ACM Design Automation and Testing in Europe Conf. (DATE), pp. 1182-1185, Feb. 2021.
+</p>
+
+<p>
+	Y. Hu, K. Yang, S. Nazarian and P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/document/9344079">SANSCrypt: A Sporadic-Authentication-Based Sequential Logic Encryption Scheme</a>," Proc. IFIP/IEEE Int. Conf. Very Large-Scale Integration (VLSI-SoC), pp. 129-134, Oct. 2020.
+</p>
+
+
 
 
 <h1>Conference Related</h1>
