--- a/research.html
+++ b/research.html
@@ -25,11 +25,11 @@ Advisor: <a class="link" href="https://viterbi.usc.edu/directory/faculty/Nuzzo/P
 Ph.D. students: 
 <a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a>,
 <a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a>, Chanwook Oh, Nikhil Vijay Naik, Krishna Chaitanya Kalagaria, Michele Lora, 
-<a class="link" href="https://www.linkedin.com/in/yifeng-xiao-248161204/">Yifeng Xiao</a>, Kevin Chang and me
+<a class="link" href="https://www.linkedin.com/in/yifeng-xiao-248161204/">Yifeng Xiao</a>, Kevin(Chia-Ming) Chang, Mattew Low and me
 </p>
 
 
-<h1>Publication</h1>
+<h1>Publications</h1>
 
 <p>
 	Y. Hu, Y. Zhang, K. Yang, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://arxiv.org/abs/2108.04892#:~:text=10%20Aug%202021%5D-,Fun%2DSAT%3A%20Functional%20Corruptibility%2DGuided%20SAT%2DBased,Attack%20on%20Sequential%20Logic%20Encryption&text=Numerical%20results%20show%20that%20Fun,one%2Dday%20time%2Dout.">Fun-SAT: Functional Corruptibility-Guided SAT-Based Attack on Sequential Logic Encryption</a>," Proc. IEEE International Symposium on Hardware Oriented Security and Trust (HOST), to appear, Dec. 2021.
@@ -53,7 +53,10 @@ Ph.D. students:
 
 
 
+<!--
 
 <h1>Conference Related</h1>
 
 <a class="link" href="https://sceneryinmirror.github.io/conference">Conference Deadline</a>
+
+-->
