--- a/research.html
+++ b/research.html
@@ -22,10 +22,11 @@ We have two subgroups, focusing on cyber-physical system design and trustworthy 
 </h2>
 <p>
 Advisor: <a class="link" href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a><br/>
+Postdoc: Michele Lora, Dhruva Kartik
 Ph.D. students: 
 <a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a>,
-<a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a>, Chanwook Oh, Nikhil Vijay Naik, Krishna Chaitanya Kalagaria, Michele Lora, 
-<a class="link" href="https://www.linkedin.com/in/yifeng-xiao-248161204/">Yifeng Xiao</a>, Kevin(Chia-Ming) Chang, Mattew Low and me
+<a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a>, Chanwook Oh, Nikhil Vijay Naik, Krishna Chaitanya Kalagaria, 
+<a class="link" href="https://www.linkedin.com/in/yifeng-xiao-248161204/">Yifeng Xiao</a>, Kevin(Chia-Ming) Chang, Matthew Low and me
 </p>
 
 
