--- a/research.html
+++ b/research.html
@@ -22,7 +22,7 @@ We have two subgroups, focusing on cyber-physical system design and trustworthy 
 </h2>
 <p>
 Advisor: <a class="link" href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a><br/>
-Postdoc: Michele Lora, Dhruva Kartik
+Postdoc: Michele Lora, Dhruva Kartik<br/>
 Ph.D. students: 
 <a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a>,
 <a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a>, Chanwook Oh, Nikhil Vijay Naik, Krishna Chaitanya Kalagaria, 
