--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,9 @@ layout: page
 title: Gallery
 ---
 
+<h1>Gallery</h1>
+
+<h2>Los Angeles</h2>
 <img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc.png?raw=true" width = "700" height = "400" alt="usc" />
 <img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc_cpa.png?raw=true" width = "700" height = "400" alt="usc_cpa" />
 <img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/la_downtown.png?raw=true" width = "700" height = "400" alt="la_downtown" />
@@ -11,6 +14,6 @@ title: Gallery
 <img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/the_monster_book_of_monsters.png?raw=true" width = "700" height = "400" alt="the_monster_book_of_monsters" />
 <img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/a_leaf_at_big_bear_lake.jpg?raw=true" width = "700" height = "400" alt="a_leaf_at_big_bear_lake" />
 
-
+<h2>San Franciso</h2>
 <img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/san_francisco/golden_state_bridge.png?raw=true" width = "700" height = "400" alt="golden_state_bridge" />
 
