update self introduction

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Home
 
 <td>
 <p>
-I am Kaixin (Cayson) Yang (Chinese name: 杨凯欣), a third year Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at University of Southern California (USC), advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>. I am interested in hardware security and trustworthy hardware design. Recently, I focus on logic locking for gate-level VLSI design, Satisfiability (SAT) based attacks and Machine Learning (ML) based attacks on encrypted design, and metrics for evaluating and guiding trustworthy design.
+I am Kaixin (Cayson) Yang (Chinese name: 杨凯欣), a Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at University of Southern California (USC), advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>. I am interested in hardware security and trustworthy hardware design. Recently, I focus on logic locking for gate-level VLSI design, Satisfiability (SAT) based attacks and Machine Learning (ML) based attacks on encrypted design, and metrics for evaluating and guiding trustworthy design.
 
 
 <!--Welcome to my blog! I am 杨凯欣 (Kaixin Yang, pronounced as /kæ'ʃɪn jʌŋ/, and please feel free to call me Cayson), a third year Ph.D. student in <a href="https://descyphy.usc.edu/">DesCyPhy Lab</a> at USC, advised by <a href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a>. -->
