--- a/index.html
+++ b/index.html
@@ -25,16 +25,23 @@ I am Kaixin (Cayson) Yang (Chinese name: 杨凯欣), a Ph.D. student in <a href=
 
 <h3 style="text-align:left">EXPERIENCE</h3>
 
-<p>Aug. 2020 - Present, Research Assistant, USC</p>
-<p>Jun. 2022 - Jul. 2022, <a href="https://viterbik12.usc.edu/shine/">SHINE</a> mentor, USC</p>
-<p>Jan. 2022 - May 2022, Teaching Assistant, EE577a, USC</p>
-<p>Aug. 2021 - Dec. 2021, Teaching Assistant, EE477L, USC</p>
+<p>Aug. 2020 - Present | Research Assistant, USC</p>
+<p>Aug. 2022 - Dec. 2022 | Project Mentor, EE581, USC</p>
+<p>Jun. 2022 - Jul. 2022 | <a href="https://viterbik12.usc.edu/shine/">SHINE</a> mentor, USC</p>
+<p>Jan. 2022 - May 2022 | Teaching Assistant, EE577a, USC</p>
+<p>Aug. 2021 - Dec. 2021 | Teaching Assistant, EE477L, USC</p>
+<p>Aug. 2021 - Dec. 2021 | Project Mentor, EE581, USC</p>
 
 <h3 style="text-align:left">EDUCATION</h3>
 
-<p>2019 - Present, Ph.D. student, Computer Engineering, USC</p>
-<p>2021, Master's Degree, Electrical Engineering, USC</p>
-<p>2019, Bachelor's Degree, Electronic and Information Science and Technology, Peking University</p>
+<p>2024 | Ph.D. student, Computer Engineering, USC</p>
+<p>2021 | Master's Degree, Electrical Engineering, USC</p>
+<p>2019 | Bachelor's Degree, Electronic and Information Science and Technology, Peking University</p>
+
+<h3 style="text-align:left">AWARD</h3>
+
+<p>2022 | DAC Young Fellow</p>
+<p>2019 | Annenberg Fellowship</p>
 
 <h3 style="text-align:left">NEWS</h3>
 
