--- a/gallery.html
+++ b/gallery.html
@@ -6,14 +6,20 @@ title: Gallery
 <h1>Gallery</h1>
 
 <h2>Los Angeles</h2>
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc.png?raw=true" width = "700" height = "400" alt="usc" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc_cpa.png?raw=true" width = "700" height = "400" alt="usc_cpa" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/la_downtown.png?raw=true" width = "700" height = "400" alt="la_downtown" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/la_union_station.png?raw=true" width = "700" height = "400" alt="la_union_station" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/hogwarts_castle.png?raw=true" width = "700" height = "400" alt="hogwarts_castle" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/the_monster_book_of_monsters.png?raw=true" width = "700" height = "400" alt="the_monster_book_of_monsters" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/a_leaf_at_big_bear_lake.jpg?raw=true" width = "700" height = "400" alt="a_leaf_at_big_bear_lake" />
+<p>USC campus:</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc.png?raw=true" width = "350" height = "200" alt="usc" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc_cpa.png?raw=true" width = "350" height = "200" alt="usc_cpa" />
+<p>Downtown:</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/la_downtown.png?raw=true" width = "350" height = "200" alt="la_downtown" />
+<p>Union Station:</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/la_union_station.png?raw=true" width = "350" height = "200" alt="la_union_station" />
+<p>Universal Studios:</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/hogwarts_castle.png?raw=true" width = "350" height = "200" alt="hogwarts_castle" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/the_monster_book_of_monsters.png?raw=true" width = "350" height = "200" alt="the_monster_book_of_monsters" />
+<p>Big Bear Lake:</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/a_leaf_at_big_bear_lake.jpg?raw=true" width = "350" height = "200" alt="a_leaf_at_big_bear_lake" />
 
 <h2>San Franciso</h2>
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/san_francisco/golden_state_bridge.png?raw=true" width = "700" height = "400" alt="golden_state_bridge" />
+<p>Golden State Bridge:</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/san_francisco/golden_state_bridge.png?raw=true" width = "350" height = "200" alt="golden_state_bridge" />
 
