--- a/gallery.html
+++ b/gallery.html
@@ -6,20 +6,44 @@ title: Gallery
 <h1>Gallery</h1>
 
 <h2>Los Angeles</h2>
-<p>USC campus:</p>
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc.png?raw=true" width = "350" height = "200" alt="usc" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc_cpa.png?raw=true" width = "350" height = "200" alt="usc_cpa" />
-<p>Downtown:</p>
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/la_downtown.png?raw=true" width = "350" height = "200" alt="la_downtown" />
-<p>Union Station:</p>
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/la_union_station.png?raw=true" width = "350" height = "200" alt="la_union_station" />
-<p>Universal Studios:</p>
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/hogwarts_castle.png?raw=true" width = "350" height = "200" alt="hogwarts_castle" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/the_monster_book_of_monsters.png?raw=true" width = "350" height = "200" alt="the_monster_book_of_monsters" />
-<p>Big Bear Lake:</p>
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/a_leaf_at_big_bear_lake.jpg?raw=true" width = "350" height = "200" alt="a_leaf_at_big_bear_lake" />
+<p>USC campus</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc.png?raw=true" width = "300" height = "169" alt="usc" /> <!---16:9--->
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/usc_cpa.png?raw=true" width = "300" height = "169" alt="usc_cpa" />
+<p>Downtown</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/la_downtown.png?raw=true" width = "300" height = "135" alt="la_downtown" /> <!---20:9--->
+<p>Union Station</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/la_union_station.png?raw=true" width = "300" height = "200" alt="la_union_station" /> <!---3:2--->
+<p>Universal Studios</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/hogwarts_castle.png?raw=true" width = "300" height = "200" alt="hogwarts_castle" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/the_monster_book_of_monsters.png?raw=true" width = "300" height = "200" alt="the_monster_book_of_monsters" />
+<p>Big Bear Lake</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/los_angeles/a_leaf_at_big_bear_lake.jpg?raw=true" width = "300" height = "200" alt="a_leaf_at_big_bear_lake" />
 
 <h2>San Franciso</h2>
-<p>Golden State Bridge:</p>
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/san_francisco/golden_state_bridge.png?raw=true" width = "350" height = "200" alt="golden_state_bridge" />
+<p>Golden State Bridge</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/san_francisco/golden_state_bridge.png?raw=true" width = "300" height = "200" alt="golden_state_bridge" />
+
+<h2>Monterey</h2>
+<p>Monterey Bay Aquarium</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/monterey/jellyfish.png?raw=true" width = "300" height = "200" alt="jellyfish" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/monterey/penguins.png?raw=true" width = "300" height = "200" alt="penguins" />
+
+<h2>Beijing</h2>
+<p>Peking University</p>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/peking_university_hall.png?raw=true" width = "300" height = "200" alt="peking_university_hall" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/graduation_1.png?raw=true" width = "300" height = "225" alt="graduation_1" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/graduation_2.png?raw=true" width = "300" height = "200" alt="graduation_2" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/weiming_lake_1.png?raw=true" width = "300" height = "200" alt="weiming_lake_1" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/weiming_lake_2.png?raw=true" width = "300" height = "200" alt="weiming_lake_2" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/boyata.png?raw=true" width = "300" height = "200" alt="boyata" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/night.png?raw=true" width = "300" height = "225" alt="night" />
+
+<h2>Anqing</h2>
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/anqing_no1_middle_school.png?raw=true" width = "300" height = "225" alt="anqing_no1_middle_school" /> <!---4:3--->
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lake.png?raw=true" width = "300" height = "225" alt="lake" /> 
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/yangtze_river.png?raw=true" width = "300" height = "225" alt="yangtze_river" /> 
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse.png?raw=true" width = "300" height = "300" alt="lunar_eclipse" /> <!---1:1---> 
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse_1.png?raw=true" width = "300" height = "300" alt="lunar_eclipse_1" /> 
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse_2.png?raw=true" width = "300" height = "300" alt="lunar_eclipse_2" /> 
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse_3.png?raw=true" width = "300" height = "300" alt="lunar_eclipse_3" /> 
 
