--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@ I am Kaixin (Cayson) Yang (Chinese name: 杨凯欣), a Ph.D. student in <a href=
 
 <h3 style="text-align:left">EXPERIENCE</h3>
 
-<p>Aug. 2020 - Present | Research Assistant, USC</p>
-<p>Aug. 2022 - Dec. 2022 | Project Mentor, EE581, USC</p>
-<p>Jun. 2022 - Jul. 2022 | <a href="https://viterbik12.usc.edu/shine/">SHINE</a> mentor, USC</p>
-<p>Jan. 2022 - May 2022 | Teaching Assistant, EE577a, USC</p>
-<p>Aug. 2021 - Dec. 2021 | Teaching Assistant, EE477L, USC</p>
-<p>Aug. 2021 - Dec. 2021 | Project Mentor, EE581, USC</p>
+<p>Aug 2020 - Present | Research Assistant, USC</p>
+<p>Aug-Dec 2022 | Project Mentor, <a href="https://classes.usc.edu/term-20223/classes/ee">EE581</a>, USC</p>
+<p>Jun-Jul 2022 | <a href="https://viterbik12.usc.edu/shine/">SHINE</a> Program Mentor, USC</p>
+<p>Jan-May 2022 | Teaching Assistant, <a href="https://classes.usc.edu/term-20221/classes/ee">EE577a</a>, USC</p>
+<p>Aug-Dec 2021 | Teaching Assistant, <a href="https://classes.usc.edu/term-20213/classes/ee">EE477L</a>, USC</p>
+<p>Aug-Dec 2021 | Project Mentor, <a href="https://classes.usc.edu/term-20213/classes/ee">EE581</a>, USC</p>
 
 <h3 style="text-align:left">EDUCATION</h3>
 
