--- a/research.html
+++ b/research.html
@@ -24,10 +24,12 @@ We have two subgroups, focusing on cyber-physical system design and trustworthy 
 Advisor: <a class="link" href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a><br/>
 Postdoc: Michele Lora, Dhruva Kartik, Luca Geretti, Dengwang Tang<br/>
 Ph.D. students: 
-<a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a>,
-<a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a>, Chanwook Oh, Nikhil Vijay Naik, Krishna Chaitanya Kalagaria, 
+Chanwook Oh, <a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a>, Nikhil Vijay Naik, Krishna Chaitanya Kalagaria, 
 <a class="link" href="https://www.linkedin.com/in/yifeng-xiao-248161204/">Yifeng Xiao</a>, Kevin (Chia-Ming) Chang, Matthew Low, 
-<a class="link" href="https://zyni2001.github.io/">Zhiyu Ni</a>, and me
+<a class="link" href="https://zyni2001.github.io/">Zhiyu Ni</a>, and me<br/>
+Alumni:
+<a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a>
+
 </p>
 
 
