--- a/gallery.html
+++ b/gallery.html
@@ -30,20 +30,20 @@ title: Gallery
 
 <h2>Beijing</h2>
 <p>Peking University</p>
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/peking_university_hall.png?raw=true" width = "300" height = "200" alt="peking_university_hall" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/graduation_1.png?raw=true" width = "300" height = "225" alt="graduation_1" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/graduation_2.png?raw=true" width = "300" height = "200" alt="graduation_2" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/weiming_lake_1.png?raw=true" width = "300" height = "200" alt="weiming_lake_1" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/weiming_lake_2.png?raw=true" width = "300" height = "200" alt="weiming_lake_2" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/boyata.png?raw=true" width = "300" height = "200" alt="boyata" />
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/night.png?raw=true" width = "300" height = "225" alt="night" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/peking_university_hall.jpg?raw=true" width = "300" height = "200" alt="peking_university_hall" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/graduation_1.jpg?raw=true" width = "300" height = "225" alt="graduation_1" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/graduation_2.jpg?raw=true" width = "300" height = "200" alt="graduation_2" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/weiming_lake_1.jpg?raw=true" width = "300" height = "200" alt="weiming_lake_1" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/weiming_lake_2.jpg?raw=true" width = "300" height = "200" alt="weiming_lake_2" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/boyata.jpg?raw=true" width = "300" height = "200" alt="boyata" />
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/beijing/night.jpg?raw=true" width = "300" height = "225" alt="night" />
 
 <h2>Anqing</h2>
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/anqing_no1_middle_school.png?raw=true" width = "300" height = "225" alt="anqing_no1_middle_school" /> <!---4:3--->
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lake.png?raw=true" width = "300" height = "225" alt="lake" /> 
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/yangtze_river.png?raw=true" width = "300" height = "225" alt="yangtze_river" /> 
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse.png?raw=true" width = "300" height = "300" alt="lunar_eclipse" /> <!---1:1---> 
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse_1.png?raw=true" width = "300" height = "300" alt="lunar_eclipse_1" /> 
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse_2.png?raw=true" width = "300" height = "300" alt="lunar_eclipse_2" /> 
-<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse_3.png?raw=true" width = "300" height = "300" alt="lunar_eclipse_3" /> 
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/anqing_no1_middle_school.jpg?raw=true" width = "300" height = "225" alt="anqing_no1_middle_school" /> <!---4:3--->
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lake.jpg?raw=true" width = "300" height = "225" alt="lake" /> 
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/yangtze_river.jpg?raw=true" width = "300" height = "225" alt="yangtze_river" /> 
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse.jpg?raw=true" width = "300" height = "300" alt="lunar_eclipse" /> <!---1:1---> 
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse_1.jpg?raw=true" width = "300" height = "300" alt="lunar_eclipse_1" /> 
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse_2.jpg?raw=true" width = "300" height = "300" alt="lunar_eclipse_2" /> 
+<img src="https://github.com/SceneryInMirror/SceneryInMirror.github.io/blob/master/assets/images/gallery/anqing/lunar_eclipse_3.jpg?raw=true" width = "300" height = "300" alt="lunar_eclipse_3" /> 
 
