--- a/research.html
+++ b/research.html
@@ -22,25 +22,24 @@ We have two subgroups, focusing on cyber-physical system design and trustworthy 
 </h2>
 <p>
 Advisor: <a class="link" href="https://viterbi.usc.edu/directory/faculty/Nuzzo/Pierluigi">Prof. Pierluigi Nuzzo</a><br/>
-Postdoc: Michele Lora, Dhruva Kartik, Luca Geretti, Dengwang Tang<br/>
+Postdoc: Michele Lora, Luca Geretti, Dengwang Tang<br/>
 Ph.D. students: 
 Chanwook Oh, <a class="link" href="https://www.linkedin.com/in/subhajit-dutta-chowdhury-3aba7992/">Subhajit Dutta Chowdhury</a>, Nikhil Vijay Naik, Krishna Chaitanya Kalagaria, 
 <a class="link" href="https://www.linkedin.com/in/yifeng-xiao-248161204/">Yifeng Xiao</a>, Kevin (Chia-Ming) Chang, Matthew Low, 
 <a class="link" href="https://zyni2001.github.io/">Zhiyu Ni</a>, and me<br/>
 Alumni:
-<a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a>
-
+Dhruva Kartik (Postdoc, Amazon), <a class="link" href="https://www.linkedin.com/in/yinghua-hu-861650123/">Yinghua Hu</a> (PhD, Synopsys)
 </p>
 
 
 <h1>Publications</h1>
 
 <p>
-	Y. Hu, Y. Zhang, K. Yang, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://arxiv.org/abs/2108.04892#:~:text=10%20Aug%202021%5D-,Fun%2DSAT%3A%20Functional%20Corruptibility%2DGuided%20SAT%2DBased,Attack%20on%20Sequential%20Logic%20Encryption&text=Numerical%20results%20show%20that%20Fun,one%2Dday%20time%2Dout.">Fun-SAT: Functional Corruptibility-Guided SAT-Based Attack on Sequential Logic Encryption</a>," Proc. IEEE International Symposium on Hardware Oriented Security and Trust (HOST), to appear, Dec. 2021.
+	Y. Hu, Y. Zhang, K. Yang, D. Chen, P. A. Beerel, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9702267">Fun-SAT: Functional Corruptibility-Guided SAT-Based Attack on Sequential Logic Encryption</a>," Proc. IEEE International Symposium on Hardware Oriented Security and Trust (HOST), pp. 281-291, Dec. 2021.
 </p>
 
 <p>
-	S. Dutta Chowdhury, K. Yang, P. Nuzzo, "ReIGNN: State Register Identification Using Graph Neural Networks for Circuit Reverse Engineering," Proc. Int. Conf. Computer Aided Design (ICCAD), to appear, Nov. 2021.
+	S. Dutta Chowdhury, K. Yang, P. Nuzzo, "<a class="link" href="https://ieeexplore.ieee.org/abstract/document/9643498">ReIGNN: State Register Identification Using Graph Neural Networks for Circuit Reverse Engineering</a>," Proc. Int. Conf. Computer Aided Design (ICCAD), pp. 1-9, Nov. 2021.
 </p>
 
 <p>
